LDEV-4054 updating English

--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 04:58:55 CST 2016 
  
 #=================== labels for ShareResources =================# 
 
@@ -23,12 +23,11 @@ label.authoring.heading.advance.desc  =Please input advance options for shared r
 label.authoring.basic.title  =Title
 label.authoring.basic.instruction  =Instruction
 label.authoring.basic.add.url  =Add URL
-label.authoring.basic.add.file  =Add Single File
-label.authoring.basic.add.website  =Add Zipped Website
-label.authoring.basic.add.learning.object  =Add IMS Content Package
+label.authoring.basic.add.file  =Add file
+label.authoring.basic.add.website  =Add zipped website
+label.authoring.basic.add.learning.object  =Add IMS content package
 label.authoring.basic.resource.list.title  =Resource list
 label.authoring.basic.resource.url  =URL
-label.authoring.basic.resource.url.placeholder = include http:// or https://
 label.authoring.basic.resource.file  =File
 label.authoring.basic.resource.website  =Website
 label.authoring.basic.resource.learning.object  =IMS CP
@@ -36,21 +35,19 @@ label.authoring.basic.resource.verify.url  =Verify URL
 label.authoring.basic.resource.preview  =Preview
 label.authoring.basic.resource.edit  =Edit
 label.authoring.basic.resource.delete  =Delete
-label.authoring.basic.resource.add.instruction  =Add Instruction
+label.authoring.basic.resource.add.instruction  =Add instruction
 label.authoring.basic.resource.instructions  =Instructions
 label.authoring.basic.resource.title.input  =Title
 label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.file.input  =File
 label.authoring.basic.resource.description.input  =Description
 label.authoring.basic.resource.zip.file.input  =Zip file:
-label.authoring.online.filelist  =Online file list
-label.authoring.offline.filelist  =Offline file list
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.advance.run.content.auto  =Run content automatically (only available if there is exactly one resource)
 label.authoring.advance.mini.number.resources.view  =Minimum number of resources to view
 label.authoring.advance.allow.learner.add.urls  =Allow learners to add URLs
-label.authoring.advance.allow.learner.add.files  =Allow learners to add Files
-label.next.instruction  =Next Instruction
+label.authoring.advance.allow.learner.add.files  =Allow learners to add files
+label.next.instruction  =Next instruction
 label.authoring.save.button  =Save
 label.authoring.cancel.button  =Cancel
 label.description  =Description:
@@ -64,12 +61,14 @@ error.upload.failed  =Upload file failed: {0}
 error.msg.upload.file.not.found  =Could not find upload file {0}.
 error.msg.zip.file.exception  =Could not handle zip file when uploading file.
 error.msg.file.not.found  =File not found exception occurs when uploading file.
+error.msg.ims.package  =Invalid IMS CP format.
+error.msg.ims.application  =ImscpApplicationException occurs when uploading resource item file.
 error.msg.website.no.initial.file  =Website zip can not find out initial file (index.htm/html or default.htm/html).
 error.msg.io.exception  =IOException occurs when uploading file.
 error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
 error.msg.repository  =A repository error occurred while trying to upload the file.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
-msg.no.instruction  =No instruction available.
+msg.no.instruction  =No instructions available.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.learning.title  =Share Resource Learning
 label.learning.heading  =Share Resources
@@ -83,13 +82,13 @@ label.learning.new.url  =New URL details:
 label.learning.comment.or.instruction  =Comment/Instruction
 monitoring.tab.summary  =Summary
 monitoring.tab.statistics  =Statistic
-monitoring.tab.edit.activity  =Edit Activity
+monitoring.tab.edit.activity  =Edit activity
 monitoring.label.group  =Group
 monitoring.summary.note  =Note: number of learners is the number of learners who have viewed the resource.
 monitoring.label.type  =Type
 monitoring.label.title  =Title
-monitoring.label.suggest  =Suggested By
-monitoring.label.number.learners  =Number of Learners
+monitoring.label.suggest  =Suggested by
+monitoring.label.number.learners  =Number of learners
 monitoring.label.hide  =Hide
 monitoring.label.show  =Show
 monitoring.label.user.loginname  =Login name
@@ -98,14 +97,15 @@ monitoring.label.hidden  =Hidden
 label.monitoring.edit.activity.cancel  =Cancel
 label.monitoring.edit.activity.update  =Update
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
+message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 export.label.resource  =Resource
 export.label.no.learning.object  =No offline package available
-export.init.resource  =Initial Resources
+export.title  =Export portfolio of Share Resource
+export.init.resource  =Initial resources
 errors.header  =<b class="error">
 errors.footer  =</b>
-error.valueReqd  =Value Required
-error.inputFileTooLarge  =Input File size is too large!
+error.valueReqd  =Value required
+error.inputFileTooLarge  =Input file size is too large!
 error.uploading  =error uploading
 error.title.empty  =Title can not be blank
 message.msg.maxFileSize  =Max 250K
@@ -120,7 +120,7 @@ label.finish  =Finished
 button.upload  =Upload
 button.add  =Add
 button.cancel  =Cancel
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =No session available
 label.show  =Show
 label.hide  =Hide
 label.save  =Save
@@ -139,7 +139,7 @@ title.reflection  =Notebook Entry
 label.continue  =Continue
 monitoring.user.fullname  =Name
 monitoring.user.reflection  =Notebook Entry
-page.title.monitoring.view.reflection  =View Notebook Entries
+page.title.monitoring.view.reflection  =View notebook entries
 button.close  =Close
 message.step.of  =Step {0} of {1}
 message.no.reflection.available  =No notebook available
@@ -149,32 +149,33 @@ error.attachment.executable  =The uploaded file is executable, please zip it bef
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity\u201d, if you come back to this Share Resource, you won\u2019t be able to share new resources.
 message.activityLocked  =The instructor has set this activity not to allow you to view or share any more resources after you have finished it.
-label.export.reflection  =Notebook Entries
+label.export.reflection  =Notebook entries
 monitoring.label.instructions  =Instructions
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
 monitor.summary.td.addNotebook  =Add a notebook at end of Shared Resources
 monitor.summary.td.notebookInstructions  =Notebook instructions
-label.authoring.advanced.notify.onassigmentsubmit  =Email instructors when a learner submits a resource
-label.authoring.advanced.notify.onfileupload =Notify instructors when a learner uploads a file
+label.authoring.advanced.notify.onassigmentsubmit  =Notify instructors when a learner submits a resource
 event.assigment.submit.subject  =LAMS: A learner submitted an assignment in a Shared Resources tool
 event.assigment.submit.body  =The learner {0} submitted an assignment in a Shared Resources tool.\n\nThis message was sent automatically, following the tool''s advanced settings.
-event.file.upload ={0} uploaded a file \"{1}\"
 error.planner.no.resource.save  =There has to be at least one resource to save.
 error.planner.url.blank  =In resource {0} URL can not be blank.
 error.planner.file.blank  =In resource {0} file can not be blank.
-label.authoring.up  =Move up
-label.authoring.down  =Move down
+label.authoring.up  =Up
+label.authoring.down  =Down
 monitoring.label.complete.time  =Finished on
 monitoring.label.time.taken  =Time taken
 output.desc.shared.items.output.definition.rsrc  =Share Resources: Uploaded URLs and paths to files
 label.submit  =Finish
 monitoring.label.actions  =Actions
 monitoring.label.views  =Views
-label.monitoring.heading  =Share Resources Monitoring
-label.resource.options=Resource Options
-label.activity.completion=End of Activity
-label.notifications=Notifications
+label.monitoring.heading  =Monitoring
+open.file.in.new.window  =Open file in a new window
+label.resource.options  =Resources options
+label.activity.completion  =End of activity
+label.notifications  =Notifications
+label.authoring.basic.resource.url.placeholder  =include http:// or https://
 
-#======= End labels: Exported 167 labels for en AU =====
+
+#======= End labels: Exported 170 labels for en AU =====
