--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 17 11:48:03 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:15:43 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
@@ -171,6 +171,18 @@ label.posted.by  ={0} on {1}
 label.image.options  =Image options
 label.activity.completion  =End of activity
 errors.maxfilesize  =Image exceeds maximum file size
+label.rating.criterias  =Rating criterias
+label.add.criteria  =Add Criteria
+label.number.of.votes  ={0} / {1} votes
+label.rate.limits.reminder  =Rating limitation: Minimum {0} and Maximum {1}.
+label.rate.limits.topic.reminder  =You have rated {0} images already.
+label.rate.limits.reminder.min  =You must rate at least {0} images.
+label.rate.limits.reminder.max  =You can only rate up to {0} images.
+js.warning.max.min.limit  =There is an error with the minimum and/or maximum set for ratings. Please check and try again.
+label.minimum  =Minimum:
+label.maximum  =Maximum:
+label.no.minimum  =No minimum
+label.no.maximum  =No maximum
 
 
-#======= End labels: Exported 165 labels for en AU =====
+#======= End labels: Exported 177 labels for en AU =====
