--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:15:43 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:21:41 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
@@ -183,6 +183,7 @@ label.minimum  =Minimum:
 label.maximum  =Maximum:
 label.no.minimum  =No minimum
 label.no.maximum  =No maximum
+label.minimum.number.words  =Minimum number of words
 
 
-#======= End labels: Exported 177 labels for en AU =====
+#======= End labels: Exported 178 labels for en AU =====
