LDEV-4118 LDEV-4054 LDEV-3450 Adding labels and updating Eng English (annoying and elusive little labels)

--- a/lams_tool_images/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:21:41 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:30:01 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
@@ -184,6 +184,8 @@ label.maximum  =Maximum:
 label.no.minimum  =No minimum
 label.no.maximum  =No maximum
 label.minimum.number.words  =Minimum number of words
+label.average.rating  =Average rating {0}/{1} votes
+label.your.rating  =Your rating {0}, average rating {1}/{2} votes
 
 
-#======= End labels: Exported 178 labels for en AU =====
+#======= End labels: Exported 180 labels for en AU =====
