--- a/lams_tool_images/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:30:01 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:39:24 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
@@ -186,6 +186,8 @@ label.no.maximum  =No maximum
 label.minimum.number.words  =Minimum number of words
 label.average.rating  =Average rating {0}/{1} votes
 label.your.rating  =Your rating {0}, average rating {1}/{2} votes
+label.comment.textarea.tip  =Type your comment here then click on the green tick
+warning.minimum.number.words  =There is a minimum required number of words in a comment is {0}
 
 
-#======= End labels: Exported 180 labels for en AU =====
+#======= End labels: Exported 182 labels for en AU =====
