--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Oct 21 20:03:05 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 00:26:33 CST 2016 
  
 #=================== labels for Submit Files =================# 
 
@@ -25,8 +25,6 @@ label.authoring.basic.instruction  =Instructions
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.save.button  =Save
 label.authoring.cancel.button  =Cancel
-label.authoring.online.filelist  =Online file list
-label.authoring.offline.filelist  =Offline file list
 authoring.exception  =There is a problem submitting content, the reason is {0}
 label.learner.fileName  =Name
 label.learner.filePath  =File
@@ -37,8 +35,8 @@ label.learner.time  =Uploaded on
 label.learner.dateOfSubmission  =Submission date
 label.learner.comments  =Comments
 label.learner.marks  =Marks
-label.learner.dateMarksReleased  =Date Marks Released
-label.learner.notAvailable  =Not Available
+label.learner.dateMarksReleased  =Date marks released
+label.learner.notAvailable  =Not available
 label.learner.noUpload  =No files have been uploaded yet.
 label.learner.uploadMessage  =Only one file can be uploaded at a time - Maximum file size is 1.0 MB
 learner.finish.without.upload  =No files have been uploaded yet. Files can not be uploaded once you choose OK.
@@ -46,7 +44,6 @@ label.monitoring.heading  =Monitoring
 label.monitoring.heading.userlist  =Summary
 label.monitoring.heading.userlist.desc  =User List Description
 label.monitoring.heading.instructions  =Instructions
-label.monitoring.heading.instructions.desc  =Online and offline instructions
 label.monitoring.heading.edit.activity  =Edit Activity
 label.monitoring.heading.edit.activity.desc  =Edit Activity description
 label.monitoring.heading.stats  =Statistics
@@ -58,8 +55,8 @@ label.monitoring.needMarking  =File(s) need marking
 label.monitoring.done.button  =Close
 label.monitoring.viewAllMarks.button  =View all marks
 label.monitoring.Mark.button  =Mark
-label.monitoring.releaseMarks.button  =Release Marks
-label.monitoring.downloadMarks.button  =Download Marks
+label.monitoring.releaseMarks.button  =Release marks
+label.monitoring.downloadMarks.button  =Download marks
 label.monitoring.updateMarks.button  =Update marks
 label.monitoring.saveMarks.button  =Save
 label.monitoring.finishedMarks.button  =Finished
@@ -75,9 +72,6 @@ submit.upload.twice  =You already upload this file, please waiting for a while.
 submit.modenotsupported  =The mode "{0}" you''ve requested is not supported
 submit.successful  =The content has been created successfully.
 learner.form.filepath.displayname  =Upload file name
-errors.header  =<UL>
-errors.prefix  =<LI>
-errors.suffix  =</LI>
 errors.footer  =</UL>
 errors.required  ={0} is required.
 errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
@@ -96,13 +90,13 @@ label.no.user.available  =No user available
 msg.mark.released  =Marks in {0} have been released.
 error.title.blank  =Title can not be blank.
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Submit Files with the following instructions:
-error.reflection.emtpy  =Please input Notebook Entry
+error.reflection.emtpy  =Please input Notebook entry
 title.reflection  =Notebook Entry
 label.continue  =Continue
 monitoring.user.fullname  =Name
 monitoring.user.loginname  =Username
-monitoring.user.reflection  =Notebook Entry
-page.title.monitoring.view.reflection  =View Notebook Entries
+monitoring.user.reflection  =Notebook entry
+page.title.monitoring.view.reflection  =View Notebook entries
 label.limit.number.upload  =Limit number of files to upload
 label.number.to.upload  =Number of files to upload
 label.unlimited  =Unlimited
@@ -130,14 +124,14 @@ event.mark.release.mark  =For the file named "{0}" submitted on {1} the mark is 
 label.authoring.advanced.notify.onfilesubmit  =Notify instructor when a learner submits a file
 event.file.submit.subject  =LAMS: A learner submitted a file in a Submit Files tool
 event.file.submit.body  =The learner {0} submitted a file in a Submit Files tool.\n\nThis message was send automatically, following tool''s advanced settings.
-label.monitor.mark.markedFile  =Marked File
-label.monitor.mark.updoad  =Upload Marked File
+label.monitor.mark.markedFile  =Marked file
+label.monitor.mark.updoad  =Response
 label.monitor.mark.replaceFile  =Replace
 label.monitor.mark.notifyStudent  =Notify learner about marked file
 message.monitor.mark.confirmDeleteFile  =Are you sure you want to delete this marked file?
 monitor.summary.date.restriction  =Date and time restriction
 monitor.summary.when.date.restriction.is.set  =Learners will not be able to submit assignments after the set date and time.
-monitor.summary.after.date  =Date and time:
+monitor.summary.after.date  =Date:
 monitor.summary.set.restriction  =Set restriction
 monitor.summary.unset.restriction  =Remove restriction
 authoring.info.teacher.set.restriction  =For this activity, the instructor fixed a deadline until {0}. After this time this activity will not be available.
@@ -163,6 +157,7 @@ event.file.restore.subject  =LAMS: File was restored.
 event.file.restore.body  =An instructor restored your file ''''{0}'''' in a Submit Files activity in LAMS. This message was send automatically, please do not reply to it.
 audit.file.delete  =Instructor {0} deleted file {1} uploaded by learner {2}.
 audit.file.restore  =Instructor {0} restored file {1} uploaded by learner {2}.
+label.search  =Search...
 
 
-#======= End labels: Exported 157 labels for en AU =====
+#======= End labels: Exported 152 labels for en AU =====
