LDEV-4054 LDEV-3450 Updating English and Spanish

--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,33 +2,28 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 00:57:00 CST 2016 
  
 #=================== labels for Learner (Java) =================# 
 
 learner.title  =LAMS Learner
-error.system.learner  =An internal error has occured and this function cannot be completed. If reporting this error, please report: <br/> <b>{0}</b>
-error.message.404  =The page you have requested can not be found.
-error.message.login  =You need login <a href="/lams/index.jsp">here</a>
 error.title  =Error occured
 message.activity.loading  =The next task is loading. Please wait....
 message.lesson.finished  =Congratulations, {0}, you have finished.
 message.lesson.finishedCont  =You have now completed the {0} lesson. You can return at anytime to this lesson and revisit and review activities by double clicking on the blue icons in the left hand progress bar. You can now close this window.
-exit.heading  =You have exited from this Lesson.
-exit.message  =You can resume this lesson using the Resume button.
 label.next.button  =Next
 label.finish.button  =Next Activity
 message.activity.parallel.partialComplete  =You have to complete the other task before progressing to the next activity....
 message.activity.parallel.noFrames  =Your browser does not handle frames!
 message.activity.options.noActivitySelected  =Please select an activity from the list
 message.activity.options.activityCount  =You must complete at least {0} out of {1} activities to finish.
-message.activity.options.note  =<u><b>Note</b></u>: Once you finish any of the above activities you can revisit them by using the progress bar.
+message.activity.options.note  =Note: Once you finish any of the above activities you can revisit them by using the progress bar.
 label.activity.options.choose  =Choose
-label.synch.gate.title  =Synch Gate
+label.synch.gate.title  =Synch gate
 label.synch.gate.message  =You have stopped at a gate. You cannot continue until all of your group/class reach this point.
-label.permission.gate.title  =Permission Gate
+label.permission.gate.title  =Permission gate
 label.permission.gate.message  =You have stopped at a gate. You cannot continue until the gate is opened in Monitoring.
-label.schedule.gate.title  =Schedule Gate
+label.schedule.gate.title  =Schedule gate
 label.schedule.gate.open.message  =The gate will be opened at:
 label.schedule.gate.close.message  =The gate will be closed at:
 label.gate.waiting.learners  ={0} out of {1} are waiting in front of the gate.
@@ -37,22 +32,7 @@ label.gate.preview.message  =As this is a preview, clicking Next will go to the 
 label.view.groups.title  =Groups
 label.view.view.groups.wait.message  =Some of your following tasks require a group. You cannot continue until the groups have been selected. Click Next if you are told that the groups have been created. This page will refresh automatically in 5 minutes.
 label.grouping.preview.message  =As this is a preview, clicking Next will do an automatic grouping. Normally the learner would have to wait until the grouping is done.
-error.export.portfolio.not.supported  =The activity {0} does not support portfolio export.
-export.portfolio.noneAttempted.message  =No activities have been attempted.
-export.portfolio.for.user.heading  =Portfolio for
-export.portfolio.for.class.heading  =Class Portfolio
-export.portfolio.lesson.started.date.label  =Lesson started:
-export.portfolio.generated.date.label  =Portfolio generated:
-export.portfolio.window.title  =Generating portfolio - please wait.
-export.portfolio.generating.message  =Your portfolio might take a while to generate. Once it's ready, your browser will begin downloading the file.
-export.portfolio.generation.complete.message  =Export Portfolio completed
 message.window.closing  =Please close this window.
-export.portfolio.notebook.title  ={0} - Notebook
-export.portfolio.notebook.link.label  =View Notebook
-export.portfolio.notebook.created.label  =created: {0}
-export.portfolio.notebook.modified.label  =last modified: {0}
-export.portfolio.notebook.private.label  =Private
-export.portfolio.notebook.public.label  =Instructor viewable
 mynotes.title  =My Notes
 mynotes.view.all.button  =View All
 mynotes.add.new.button  =Add New
@@ -70,7 +50,7 @@ label.edit.button  =Edit
 mynotes.entry.submitted.by  =Submitted by: {0}
 label.close.button  =Close
 mynotes.journals.title  =Journals
-mynotes.entry.no.title.label  =No Title
+mynotes.entry.no.title.label  =No title
 message.progress.broken  =An error has occurred and you cannot continue without LAMS recalculating your current activity. A staff member may be editing the lesson.
 message.progress.broken.try.resume  =Close and reopen this window to continue. If this error re-occurs, wait a few minutes and then try again.
 label.branching.wait.message  =You have stopped at a branching point. You cannot continue until your branch is allocated in Monitoring.
@@ -79,22 +59,17 @@ label.branching.preview.message  =You have reached a branching activity. As you 
 label.branching.title  =Branching
 label.sequence.empty.message  =There are no activities to complete in this part of the lesson. Click Next to continue.
 label.my.progress  =My Progress
-label.export.portfolio  =Export Portfolio
 label.resume  =Resume
-message.activity.options.note.maximum  =<u><b>Note</b></u>: The maximum number of activities you may attempt is {0}. You can revisit started or finished activities by using the progress bar.
+message.activity.options.note.maximum  =Note: The maximum number of activities you may attempt is {0}. You can revisit started or finished activities by using the progress bar.
 message.activity.set.options.activityCount  =You must complete at least {0} out of {1} sequences to finish.
-message.activity.set.options.note  =<u><b>Note</b></u>: Once you finish any of the above sequences you can revisit them by using the progress bar.
-message.activity.set.options.note.maximum  =<u><b>Note</b></u>: The maximum number of sequences you may attempt is {0}. You can revisit started or finished sequences by using the progress bar.
+message.activity.set.options.note  =Note: Once you finish any of the above sequences you can revisit them by using the progress bar.
+message.activity.set.options.note.maximum  =Note: The maximum number of sequences you may attempt is {0}. You can revisit started or finished sequences by using the progress bar.
 label.learner.choice.group.full  =Group full
 label.learner.choice.group.message  =Please select a group. Some groups may not be available if they reached the maximum number of members.
 label.choose.group.button  =Choose
-label.condition.gate.title  =Condition Gate
+label.condition.gate.title  =Condition gate
 label.condition.gate.close.message  =You have reached a condition gate. You have not satisfied the required conditions and you may not pass. Please return to previous activities. After you correct your answers, please press the button to proceed to next activities.
 label.presence  =Presence
-export.portfolio.competences.defined.table.title  =Defined Competencies
-export.portfolio.competences.defined.title  =Title
-export.portfolio.competences.defined.description  =Description
-export.portfolio.competences.covered.title  =Competencies covered
 label.optional.maxActivitiesReached  =The maximum number optional activities has already been reached.
 label.optional.maxSequencesReached  =The maximum number optional sequences has already been reached.
 label.view.groups.learners  =Learners in group
@@ -105,10 +80,7 @@ learner.im.title  =Instant messaging
 learner.im.group.chat  =Group Chat
 learner.im.users  =Users
 learner.im.send  =Send
-learner.im.ie6.warning  =Sorry, Internet Explorer 6 is not compatible with Presence Chat
-label.learner.progress.open  =<<
 label.learner.progress.open.tooltip  =Hide lesson progress
-label.learner.progress.closed  =>>
 label.learner.progress.closed.tooltip  =Show lesson progress
 label.learner.progress.activity.current.tooltip  =This is the current activity
 label.learner.progress.activity.completed.tooltip  =Double click to review this completed activity
@@ -116,7 +88,6 @@ label.learner.progress.activity.attempted.tooltip  =You have attempted but not y
 label.learner.progress.activity.tostart.tooltip  =You need to complete the activities before this activity to access it
 label.learner.progress.activity.support.tooltip  =Double click to participate in this support activity
 button.exit  =Exit
-button.export  =Export
 button.save  =Save
 label.learner.progress.notebook  =Notebook
 label.learner.progress.support  =Support Activities
@@ -130,6 +101,13 @@ label.hours  =hours
 label.minutes  =minutes
 label.seconds  =seconds
 label.schedule.gate.open.remaining  =You can only move through the gate and attempt the remaining activities in
+message.lesson.restart  =Restart lesson from the beginning again
+message.lesson.restart.button  =Restart
+message.learner.progress.restart.confirm  =Are you sure you want to start the lesson from the beginning?
+mynotes.add.new.current.lesson.button  =Add note this lesson
+label.group.confirm.header  =Confirm group selection
+label.group.confirm.button  =Confirm
+label.group.confirm.areyoujoining  =Are you joining
 
 
-#======= End labels: Exported 124 labels for en AU =====
+#======= End labels: Exported 102 labels for en AU =====
