--- a/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,20 +2,15 @@ appName = learner_java
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 00:56:57 CST 2016 
  
 #=================== labels for Learner (Java) =================# 
 
 learner.title  =LAMS Estudiante
-error.system.learner  =Ha ocurrido un error y esta operaci\u00f3n no ha podido realizarse.  Reporte este error a su administrador de sistema mencionando lo siguiente: {0}
-error.message.404  =La pag\u00edna que esta buscando no se ha podido encontrar.
-error.message.login  =Necesita entrar de nuevo al sistema.
 error.title  =Ha occurrido un error
 message.activity.loading  =La pr\u00f3xima actividad esta siendo cargada. Un momento por favor.
 message.lesson.finished  ={0} ha llegado al final de esta lecci\u00f3n.
 message.lesson.finishedCont  =Ha finalizado la lecci\u00f3n {0}. Puede regresar a esta lecci\u00f3n en cualquier momento y revisar las actividades realizadas usando la barra de progreso. Ahora puede cerrar esta ventana.
-exit.heading  =Ha abortado la lecci\u00f3n.
-exit.message  =Puede continuar la lecci\u00f3n presionando el bot\u00f3n de Continuar.
 label.next.button  =Continuar
 label.finish.button  =Finalizar
 message.activity.parallel.partialComplete  =Tiene que terminar la otra actividad antes de proseguir con la siguiente...
@@ -37,22 +32,7 @@ label.gate.preview.message  =Como esta es una vista previa, presionando el bot\u
 label.view.groups.title  =Grupos
 label.view.view.groups.wait.message  =Algunas de las siguientes actividades requiren grupos. No se puede continuar hasta que los grupos no hayan sido definidos por el instructor. Presione el bot\u00f3n de Continuar si la puerta se encuentra abierta. Esta pag\u00edna se autocargara en cinco minuto.
 label.grouping.preview.message  =Como esta es una vista previa, presionando el bot\u00f3n de Continuar seleccionar\u00e1 un grupo automaticamente. Normalmente, el estudiate(s) esperar\u00eda aqui hasta que el grupo sea formado.
-error.export.portfolio.not.supported  =La actividad {0} no soporta la exportaci\u00f3n de portfolio.
-export.portfolio.noneAttempted.message  =No se ha atendido ninguna actividad
-export.portfolio.for.user.heading  =Portfolio de
-export.portfolio.for.class.heading  =Portfolio de la Clase
-export.portfolio.lesson.started.date.label  =Lecci\u00f3n comenzada:
-export.portfolio.generated.date.label  =Fecha de generaci\u00f3n de Portfolio:
-export.portfolio.window.title  =Generando el portfolio - espere por favor
-export.portfolio.generating.message  =El portfolio ha sido generado. Ahora puede descargar el archivo. Una vez descargado el archivo puede cerrar esta ventana.
-export.portfolio.generation.complete.message  =El Portfolio ha sido exportado
 message.window.closing  =Por favor cierre esta ventana.
-export.portfolio.notebook.title  ={0} - Anotaciones
-export.portfolio.notebook.link.label  =Ver Anotaciones
-export.portfolio.notebook.created.label  =Anotaci\u00f3n creada: {0}
-export.portfolio.notebook.modified.label  =\u00daltima modificaci\u00f3n: {0}
-export.portfolio.notebook.private.label  =Personal
-export.portfolio.notebook.public.label  =Visible para el tutor
 mynotes.title  =Mis Anotaciones
 mynotes.view.all.button  =Ver todas
 mynotes.add.new.button  =Agregar Anotaci\u00f3n
@@ -79,7 +59,6 @@ label.branching.preview.message  =Has rechazado una actividad de ramificaci\u00f
 label.branching.title  =Ramificaci\u00f3n
 label.sequence.empty.message  =No hay actividades para completar en esta parte de la lecci\u00f3n. Teclea Siguiente para continuar.
 label.my.progress  =Progreso
-label.export.portfolio  =Exportar Portfolio
 label.resume  =Continuar
 message.activity.options.note.maximum  =El n\u00famero m\u00e1ximo de actividades que puede seleccionar es {0}. Puede revisitar actividades que ya ha comenzado utilizando la barra de progreso.
 message.activity.set.options.activityCount  =Debe finalizar al menos {0} de {1} secuencias para terminar.
@@ -91,10 +70,6 @@ label.choose.group.button  =Seleccione
 label.condition.gate.title  =Puerta condicional
 label.condition.gate.close.message  =Usted ha llegado a una puerta condicional. Usted no ha cumplido con alguna condici\u00f3n en las actividades anteriores.  Por favor, revea las actividades y corrija sus respuestas anteriores.
 label.presence  =Estudiantes online
-export.portfolio.competences.defined.table.title  =Competencias definidas
-export.portfolio.competences.defined.title  =Competencia
-export.portfolio.competences.defined.description  =Definici\u00f3n
-export.portfolio.competences.covered.title  =Competencia cubierta
 label.optional.maxActivitiesReached  =Ya ha finalizado el n\u00famero m\u00e1ximo de actividades opcionales.
 label.optional.maxSequencesReached  =Ya ha finalizado el n\u00famero m\u00e1ximo de secuencias opcionales.
 label.view.groups.learners  =Estudiantes en los grupos
@@ -105,10 +80,7 @@ learner.im.title  =Mensajer\u00eda instant\u00e1nea
 learner.im.group.chat  =Chat de grupo
 learner.im.users  =Usuarios
 learner.im.send  =Enviar
-learner.im.ie6.warning  =Lo sentimos, Internet Explorer 6 no es compatible con Chat Presencia
-label.learner.progress.open  =<<
 label.learner.progress.open.tooltip  =Ocultar barra de progreso
-label.learner.progress.closed  =>>
 label.learner.progress.closed.tooltip  =Mostrar barra de progreso
 label.learner.progress.activity.current.tooltip  =Esta es la actividad actual
 label.learner.progress.activity.completed.tooltip  =Haga doble clic para reveer esta actividad completada
@@ -116,7 +88,6 @@ label.learner.progress.activity.attempted.tooltip  =Ha intentado pero no ha term
 label.learner.progress.activity.tostart.tooltip  =Debe completar las actividades anteriores a esta actividad para acceder a ella
 label.learner.progress.activity.support.tooltip  =Haga doble clic para participar en esta actividad adjunta
 button.exit  =Salir
-button.export  =Exportar
 button.save  =Guardar
 label.learner.progress.notebook  =Notas
 label.learner.progress.support  =Actividades adjuntas
@@ -130,6 +101,13 @@ label.hours  =horas
 label.minutes  =minutos
 label.seconds  =segundos
 label.schedule.gate.open.remaining  =Usted solo podr\u00e1 pasar esta puerto y continuar con el resto de las actividades en
+message.lesson.restart  =Comenzar la lecci\u00f3n desde el principio nuevamente
+message.lesson.restart.button  =Re-comenzar
+message.learner.progress.restart.confirm  =\u00bfEst\u00e1 seguro de que desea iniciar la lecci\u00f3n desde el comienzo nuevamente?
+mynotes.add.new.current.lesson.button  =A\u00f1adir notar en esta lecci\u00f3n
+label.group.confirm.header  =Selecci\u00f3n de grupo
+label.group.confirm.button  =Confirmar
+label.group.confirm.areyoujoining  =\u00bfUnirse al grupo
 
 
-#======= End labels: Exported 124 labels for es ES =====
+#======= End labels: Exported 102 labels for es ES =====
